sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:12: error: not found: value c
    if (c==0){
        ^