sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  {
  for (i <- 0 to getNombreValeurs()){
    for (j <- 0 to getNombreValeurs()-i -2){
      var c:Int =0
      if (plusPetit(j+1,j)){
        echange(j,j+1)
        c+=1
      }
      
    }
    if (c==0){
        return
      }
  }
}